fixed a scrollbar appearnce in the note and changed the voters price to 20 to make things more interesting at first

--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ body {
 	position: absolute;
 	text-align: center;
 	border-style: none;
+  overflow: hidden;
 }
 
 #note > *:focus {
